[METADATA]
name = WorkToy
version = 0.49.00
author = Asger Jon Vistisen
author_email = asgerjon2@gmail.com
description = A Collection of Utilities
long_description = file:README.md,LICENSE
long_description_content_type = text/markdown
url =
project_urls =
classifiers =
    Programming Language::Python::3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System::OS Independent
keywords =
    utilities
    convenience
    Asger Jon Vistisen
[OPTIONS]
package_dir =
    =src
packages = find:
python_requires = >=3.7
[options.packages.find]
where = src
